debugged color contrast issue in Links that are in the recent comments widget.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1356,7 +1356,6 @@ section.widget p {
     text-transform: capitalize;
     display: block;
     margin: 8px 0 0;
-    opacity: .5;
     text-indent: 0;
 }
 
